[gd_scene load_steps=6 format=3 uid="uid://lcb1uuqo0eie"]

[ext_resource type="Script" uid="uid://txvenq2okq17" path="res://Scripts/ModuleButton.gd" id="1_y0ekh"]
[ext_resource type="Texture2D" uid="uid://jqit24a50vlk" path="res://Art/Info.png" id="2_3v3jo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y0ekh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3v3jo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3q1bb"]

[node name="Button" type="Button"]
custom_minimum_size = Vector2(200, 100)
theme_override_styles/hover = SubResource("StyleBoxFlat_y0ekh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3v3jo")
theme_override_styles/normal = SubResource("StyleBoxFlat_3q1bb")
script = ExtResource("1_y0ekh")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Applications"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="InfoButton" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 175.0
offset_right = 225.0
offset_bottom = 50.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 30
icon = ExtResource("2_3v3jo")
icon_alignment = 1
expand_icon = true

[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="button_up" from="InfoButton" to="." method="_on_info_button_button_up"]
